feat(inventory): implement bounded context

--- a/SweetManagerWebService/appsettings.json
+++ b/SweetManagerWebService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DbConnection": "Server=localhost;database=sweet-manager;user=root;password=password"
+    "DbConnection": "Server=localhost;database=sweet-manager;user=root;password=DBrs12*"
   },
   "Logging": {
     "LogLevel": {
