feat: Add domain queries and service interfaces for monitoring
Introduced query records for bookings, rooms, smoke sensors, thermostats, and type rooms in the Monitoring domain. Added corresponding service interfaces for command and query operations for each entity. Updated the project file to include new Monitoring folders for Application and Interfaces.

--- a/SweetManagerWebService/SweetManagerWebService.csproj
+++ b/SweetManagerWebService/SweetManagerWebService.csproj
@@ -36,6 +36,8 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Monitoring\Application\" />
+    <Folder Include="Monitoring\Interfaces\" />
   </ItemGroup>
 
 </Project>
