feat: deploying backend in docker with docker compose and published in docker hub

--- a/SweetManagerWebService/appsettings.Development.json
+++ b/SweetManagerWebService/appsettings.Development.json
@@ -1,4 +1,21 @@
 {
+  "ConnectionStrings": {
+    "DbConnection": "Server=localhost;port=3307;database=sweetmanager_db;user=root;password=rootpassword"
+  },
+  "JwtSettings": {
+    "SecretKey": "DhfPTWJP4VvK5XBVrQqT5P3CgF9U7ZzFxLQzCp3Yurk=",
+    "Issuer": "SweetManagerIssuer",
+    "Audience": "SweetManagerAudience",
+    "ExpirationInMinutes": 1440
+  },
+  "MailSettings": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "SenderName": "SweetManager",
+    "SenderEmail": "sweetmanager@example.com",
+    "UserName": "sweetmanager@example.com",
+    "Password": "yourpassword"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
