--- a/SweetManagerWebService/appsettings.json
+++ b/SweetManagerWebService/appsettings.json
@@ -1,6 +1,20 @@
 {
   "ConnectionStrings": {
-    "DbConnection": "Server=localhost;database=sweet-manager;user=root;password=DBrs12*"
+    "DbConnection": "Server=db31043.public.databaseasp.net; Database=db31043; Uid=db31043; Pwd=3Cb=E!2c#8kD;"
+  },
+  "JwtSettings": {
+    "SecretKey": "DhfPTWJP4VvK5XBVrQqT5P3CgF9U7ZzFxLQzCp3Yurk=",
+    "Issuer": "SweetManagerIssuer",
+    "Audience": "SweetManagerAudience",
+    "ExpirationInMinutes": 1440
+  },
+  "MailSettings": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "SenderName": "SweetManager",
+    "SenderEmail": "sweetmanager@example.com",
+    "UserName": "sweetmanager@example.com",
+    "Password": "yourpassword"
   },
   "Logging": {
     "LogLevel": {
